# credentials-manager

./: .gitignore  Cargo.toml  README.md  config.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  send-values.yml
src/: main.rs  set_secrets.rs  utils.rs
